<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/single_player"
        android:textSize="26sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/player_name"
           android:padding="20dp"
           android:textSize="18sp"
           android:textStyle="bold"
           android:textColor="@android:color/black"/>

       <EditText
           android:id="@+id/playerName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:hint="@string/enter_name" />

   </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_option"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@android:color/black"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">



        <RadioButton
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            />

        <RadioButton
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_o"
            android:textStyle="bold"
            android:textSize="26sp"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_board_size"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/board_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/three_by_three"/>

    <Button
        android:id="@+id/board_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/five_by_five"/>


</LinearLayout>