<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/board_3_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.tictactoe.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player1tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                tools:text="Player 1" />

            <TextView
                android:id="@+id/player1_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/_0"
                android:textSize="45sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player2tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/computer"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/player2_computer_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/_0"
                android:textSize="45sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_margin="16dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bt0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/game_button_bg"
                android:layout_weight="1"
                android:textSize="40sp"
                 />

            <Button
                android:id="@+id/bt1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bt3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bt4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >


            <Button
                android:id="@+id/bt5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/game_button_bg"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bt10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/game_button_bg"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bt11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bt15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/game_button_bg"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt16"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt17"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt18"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt19"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bt20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/game_button_bg"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt23"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:background="@color/game_button_bg"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">


            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_rounded_background"
                android:padding="16dp"
                android:text="@string/reset_board"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/transparent_rounded_background"
                android:padding="20dp"
                android:text="@string/main_menu"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>